--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,28 +1,6 @@
 // @import "../header/header.component.scss";
-@mixin flex-plan-preview {
-  .plans-preview{
-    display: flex;
-    // justify-content: space-between;
-    justify-content: space-around;
-    align-items: center;
-  }
-  .plans-preview-icons {
-    font-family: 'Raleway', sans-serif;
-    font-weight: lighter;
-    font-size: 20px;
-    font-weight: bolder;
-    text-align: center;
-    padding-top: 10px;
-    background-color: rgba(255,255,255,0.4);
 
-    // background-image: url(../../assets/images/plans-preview/motion_cube.gif);
-    //  background-repeat: no-repeat;
-    //  background-attachment: fixed;
-    // background-position: center;
-  }
-}
-
-#tour-button, #fancy-button {
+@mixin fancy-buttons{
   border-color: #979797;
   border-width: 4px;
   border-style: double;
@@ -32,12 +10,26 @@
   text-decoration: none;
 }
 
+@mixin flex-plan-preview {
+  .plans-preview{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .plans-preview-icons {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px bolder ;
+    font-weight: bolder;
+    text-align: center;
+    padding-top: 10px;
+    background-color: rgba(255,255,255,0.4);
+  }
+}
 
+#tour-button, #fancy-button {
+  @include fancy-buttons
+}
 
-// -------------Tour With US POP UP------------
-
-
-// --------------------------------------------------
 
 #amenities-a{
   display: flex;
@@ -62,10 +54,7 @@
   margin-top: 4rem;
 
 }
-#fancy-button-border-plans{
-// align-self: center;
-  // margin-left: 7rem;
-}
+
 
 #plans-preview-container {
   @include flex-plan-preview;
@@ -127,16 +116,12 @@ align-self: center;
 
 #day-plan-preview{
   background-image: url(../../assets/images/plans-preview/mirrors-green.png) ;
-  // opacity: .9;
-  // filter:blur(1px);
   color: white;
   z-index: 0;
 }
 
 #week-plan-preview{
   background-image: url(../../assets/images/plans-preview/images-2.jpg) ;
-  // opacity: .9;
-  // filter:blur(1px);
   color: white;
   z-index: 0;
 }
@@ -145,8 +130,6 @@ align-self: center;
 #month-plan-preview{
   background-image: url(../../assets/images/plans-preview/entrance.jpg) ;
   background-size: 100%;
-  // opacity: .9;
-  // filter:blur(1px);
   color: white;
   z-index: 0;
 }
@@ -162,18 +145,9 @@ align-self: center;
   height: 120%;
 }
 
-.tour-button-border{
 
-  // display: block;
-
-  // width: 159px;
-
-  z-index: 0  ;
-
-}
 .preview-icons {
   display: block;
-
 }
 
 #home-container:last-of-type {
@@ -182,15 +156,11 @@ align-self: center;
 
 #home-container > div, .tour-button-border {
   margin-bottom: 20px;
+  z-index: 0;
 }
 
 #carousel-section {
-// background-image: url(../../assets/images/carousel/gold-p1.jpg);
 background-size: cover ;
-min-width: 500px;
-max-width: 500px;
-min-height: 500px;
-max-height: 500px;
 width: auto;
 }
 
@@ -200,33 +170,26 @@ width: auto;
   margin-left: 10%;
 }
 
+.img-fluid {
+  margin: 0 auto;
+}
 
 @media only screen and (min-width:500px) {
-
   .img-fluid {
-    min-width: 500px;
-    max-width: 500px;
-    min-height: 300px;
     max-height: 300px;
-    // min-width: 90%;
+    width: 500px;
   }
 }
 
 @media only screen and (min-width:800px) {
   #carousel-section {
-    min-width: 600px;
-    max-width: 600px;
-    min-height: 400px;
     max-height: 400px;
+    width: 700px;
   }
   #plans-preview-container {
       display: flex;
-       // flex-direction: row;
        justify-content: space-around;
        align-content: space-around;
        min-width: 975px;
-       // max-width: 1000px;
   }
-
-
 }
