add plans to plans page

--- a/src/app/plans/plans.component.css
+++ b/src/app/plans/plans.component.css
@@ -51,8 +51,7 @@
     align-items: center; }
   #plans-preview-container .plans-preview-icons {
     font-family: 'Raleway', sans-serif;
-    font-weight: lighter;
-    font-size: 20px;
+    font-size: 20px bolder;
     font-weight: bolder;
     text-align: center;
     padding-top: 10px;
@@ -139,9 +138,6 @@
   margin: 0 0 20px 0;
   height: 120%; }
 
-.tour-button-border {
-  z-index: 0; }
-
 .preview-icons {
   display: block; }
 
@@ -149,14 +145,11 @@
   margin-bottom: 10%; }
 
 #home-container > div, .tour-button-border {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  z-index: 0; }
 
 #carousel-section {
   background-size: cover;
-  min-width: 500px;
-  max-width: 500px;
-  min-height: 500px;
-  max-height: 500px;
   width: auto; }
 
 #carouselExampleIndicators {
@@ -164,19 +157,18 @@
   max-width: 80%;
   margin-left: 10%; }
 
+.img-fluid {
+  margin: 0 auto; }
+
 @media only screen and (min-width: 500px) {
   .img-fluid {
-    min-width: 500px;
-    max-width: 500px;
-    min-height: 300px;
-    max-height: 300px; } }
+    max-height: 300px;
+    width: 500px; } }
 
 @media only screen and (min-width: 800px) {
   #carousel-section {
-    min-width: 600px;
-    max-width: 600px;
-    min-height: 400px;
-    max-height: 400px; }
+    max-height: 400px;
+    width: 700px; }
   #plans-preview-container {
     display: -webkit-box;
     display: -ms-flexbox;
