add img urls to gallery page, add flex box to create dynamic grid

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,34 @@
-<p>
-  gallery works!
-</p>
 <h3>Gallery</h3>
-<img src="" alt="">
+<div class="row">
+  <div class="column">
+    <img src="../../assets/images/gallery/yoga-1.jpg" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/box-room1.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/entrance-1.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/yoga-2.jpg" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/green-word-wall.png" alt="" class="gallery-image">
+
+  </div>
+  <div class="column">
+    <img src="../../assets/images/gallery/rainbow-room.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/yoga-3.jpg" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/box-room3.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/living-room.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/box-room2.png" alt="" class="gallery-image">
+
+  </div>
+  <div class="column">
+    <img src="../../assets/images/gallery/hangout-1.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/pink-room.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/coffee-bar.jpg" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/tv-room.png" alt="" class="gallery-image">
+
+  </div>
+  <div class="column">
+    <img src="../../assets/images/gallery/images-2.jpg" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/one-meeting-area.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/front-entrance-looking-out.jpg" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/coffee-counter-area.jpg" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/unity-room.png" alt="" class="gallery-image">
+    <img src="../../assets/images/gallery/front-entrance.jpg" alt="" class="gallery-image">
+  </div>
+</div>
