--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -6,12 +6,7 @@
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly; }
+  flex-wrap: wrap; }
 
 h3 {
   width: 100%;
