adjust header logo margin and remove unused scss

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -16,9 +16,8 @@
   margin-left: 5rem;
 }
 
-// button
+
 .menu-button {
-  // align-self: flex-start;
   margin-right: 1rem;
 }
 
@@ -89,5 +88,6 @@ color: white;
   #header-logo {
     align-self: center;
     margin-top: 3.5rem;
-    margin-left: 27rem;
+    margin-left: 20rem;
   }
+}
