--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,3 @@
-
 .header-container {
   display: flex;
   flex-direction: row;
@@ -8,32 +7,25 @@
   height: 5rem;
   background-image: linear-gradient(to bottom, #4d9787, #5a9a8c, #669e91, #71a196, #7ca49b);
   margin-bottom: 2rem;
-};
+  .menu-button {
+    margin-right: 1rem;
+    .dropdown-menu  {
+      opacity: .9;
+      a {
+        li {
+          text-decoration: none;
+          color: black;
+          margin-left: .5rem;
+        }
+      }
+    }
+  }
+}
 
 #header-logo {
   align-self: center;
   margin-top: 3.5rem;
   margin-left: 5rem;
-}
-
-
-.menu-button {
-  margin-right: 1rem;
-}
-
-.dropdown-menu {
- opacity: .9;
- // padding: 1rem;
-}
-
-.dropdown-menu a li {
-  text-decoration: none;
-  color: black;
-  margin-left: .5rem;
-}
-
-.dropdown-menu a {
-  text-decoration: none;
 }
 
 #header-label{
@@ -43,38 +35,35 @@
   z-index: 100;
   top: .08rem;
   margin-left: 5%;
+  h3 {
+    margin-top: .5rem;
+    font-weight: 300;
+  }
+  p {
+    font-size: .8rem;
+    font-weight: 300;
+  }
 }
 
-#header-label h3 {
-  margin-top: .5rem;
-  font-weight: 300;
-}
-
-#header-label p {
-  font-size: .8rem;
-  font-weight: 300;
-}
 
 #header-links{
   display: none;
+  ul{
+    display: inline-flex;
+    list-style-type: none;
+    li {
+      margin: auto 1rem;
+      a{
+        color: white;
+      }
+    }
+  }
+  ul:nth-child(1){
+    margin-top: .9rem;
+  }
 }
 
-#header-links ul{
-  display: inline-flex;
-  list-style-type: none;
-}
 
-#header-links ul:nth-child(1){
-margin-top: .9rem;
-}
-
-#header-links ul li {
-margin: auto 1rem;
-}
-
-#header-links ul li a{
-color: white;
-}
 
 
 @media only screen and (min-width: 1124px){
