--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,3 @@
-// @import "../header/header.component.scss";
-
 @mixin fancy-buttons{
   border-color: #979797;
   border-width: 4px;
@@ -8,6 +6,26 @@
   padding: 2px 6px;
   color: black;
   text-decoration: none;
+}
+
+// border options for plans-preview icons and text
+@mixin plans-preview-border-swcr {
+  border-style: solid;
+  border-width: .5px;
+  border-color: gray;
+  border-radius: 8px;
+}
+
+// border for plans preview options
+@mixin plans-preview-border-bbb {
+  background-color: rgba(255,255,255,0.1);
+  box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
+  border: .125rem solid transparent;
+}
+
+@mixin plan-preview-background {
+  color: white;
+  z-index: 0;
 }
 
 @mixin flex-plan-preview {
@@ -59,7 +77,6 @@
 #plans-preview-container {
   @include flex-plan-preview;
   max-width: auto;
-  // margin-top: 200px;
   display: block;
   margin-top: 2rem;
 }
@@ -67,17 +84,13 @@
 
 
 .fancy-button-border{
-// margin-left: 50%;
-align-self: center;
+  align-self: center;
 }
 
 .plans-preview {
   width: 300px;
   height: 145px;
-  border-style: solid;
-  border-width: .5px;
-  border-color: gray;
-  border-radius: 8px;
+  @include plans-preview-border-swcr;
   margin: 10px auto;
   box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
 }
@@ -86,13 +99,8 @@ align-self: center;
 .plans-preview-icons {
   width: 84px;
   height: 84px;
-  border-style: solid;
-  border-width: .5px;
-  border-color: gray;
-  border-radius: 8px;
-  background-color: rgba(255,255,255,0.1);
-  box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
-  border: .125rem solid transparent;
+  @include plans-preview-border-swcr;
+  @include plans-preview-border-bbb;
 }
 
 .plans-preview-text {
@@ -100,38 +108,32 @@ align-self: center;
   z-index: 10;
   width: 84px;
   height: 84px;
-  border-style: solid;
-  border-width: .5px;
-  border-color: gray;
-  border-radius: 8px;
   padding-top: 2rem;
-  background-color: rgba(255,255,255,0.1);
-  box-shadow: 8px 10px 20px 0px rgba(46,61,73,.15);
-  border: .125rem solid transparent;
+  @include plans-preview-border-swcr;
+  @include plans-preview-border-bbb;
   text-align: center;
   justify-content: center;
   align-content: center;
   color: white;
 }
 
+
+
 #day-plan-preview{
   background-image: url(../../assets/images/plans-preview/mirrors-green.png) ;
-  color: white;
-  z-index: 0;
+@include plan-preview-background;
 }
 
 #week-plan-preview{
   background-image: url(../../assets/images/plans-preview/images-2.jpg) ;
-  color: white;
-  z-index: 0;
+@include plan-preview-background;
 }
 
 
 #month-plan-preview{
   background-image: url(../../assets/images/plans-preview/entrance.jpg) ;
   background-size: 100%;
-  color: white;
-  z-index: 0;
+@include plan-preview-background;
 }
 
 
@@ -157,22 +159,20 @@ align-self: center;
 #home-container > div, .tour-button-border {
   margin-bottom: 20px;
   z-index: 0;
+  #carousel-section {
+    background-size: cover ;
+    width: auto;
+  }
+  #carouselExampleIndicators{
+    max-height: 95%;
+    max-width: 80%;
+    margin-left: 10%;
+  }
+  .img-fluid {
+    margin: 0 auto;
+  }
 }
 
-#carousel-section {
-background-size: cover ;
-width: auto;
-}
-
-#carouselExampleIndicators{
-  max-height: 95%;
-  max-width: 80%;
-  margin-left: 10%;
-}
-
-.img-fluid {
-  margin: 0 auto;
-}
 
 @media only screen and (min-width:500px) {
   .img-fluid {
@@ -187,9 +187,9 @@ width: auto;
     width: 700px;
   }
   #plans-preview-container {
-      display: flex;
-       justify-content: space-around;
-       align-content: space-around;
-       min-width: 975px;
+    display: flex;
+    justify-content: space-around;
+    align-content: space-around;
+    min-width: 975px;
   }
 }
