--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -10,9 +10,8 @@
   -ms-flex-align: center;
   align-items: center;
   margin-top: 3rem; }
-
-.login-container h3 {
-  margin-bottom: .7rem; }
+  .login-container h3 {
+    margin-bottom: .7rem; }
 
 #login-items {
   display: -webkit-box;
@@ -32,10 +31,8 @@
   -ms-flex-pack: center;
   justify-content: center;
   text-align: center; }
-
-#login-items a {
-  margin-right: 1rem; }
-
-button {
-  margin-top: .7rem;
-  margin-right: 7rem; }
+  #login-items a {
+    margin-right: 1rem; }
+    #login-items a button {
+      margin-top: .7rem;
+      margin-right: 7rem; }
